fix spacing

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -321,10 +321,10 @@ hr {
     .piccontainerborder,
     .piccontainer {
         all: unset;
+        padding-bottom: 35px;
     }
     .middle h4 {
         font-size: 16px;
-        margin-bottom: 35px;
         border: none;
     }
     .third {
